Image paths fixed

--- a/articles/2020_04_05_ইতিবাচক চিন্তার প্রথম ধাপ.md
+++ b/articles/2020_04_05_ইতিবাচক চিন্তার প্রথম ধাপ.md
@@ -1,15 +1,15 @@
-এই কাল্পনিক ঘটনাগুলো পড়ে দেখুনতো, এমন ঘটনা কি আপনার সাথেও কখনো ঘটেছে? 
- 
-## ঘটনা ১ 
-নতুন স্কুলে প্রথম দিন, ক্লাস রুমে একটা সীটে বসতে গেলেন তখন পাশে থেকে একজন বললো, "এটা আরেকজনের জন্য রাখা আছে, 
+এই কাল্পনিক ঘটনাগুলো পড়ে দেখুনতো, এমন ঘটনা কি আপনার সাথেও কখনো ঘটেছে?
+
+## ঘটনা ১
+নতুন স্কুলে প্রথম দিন, ক্লাস রুমে একটা সীটে বসতে গেলেন তখন পাশে থেকে একজন বললো, "এটা আরেকজনের জন্য রাখা আছে,
 তুমি অন্য জায়গায় বসো"। এই নিয়ে একজন সহপাঠীর সাথে প্রথম দিনই কথা কাটাকাটি। মন মেজাজ খুব খারাপ, আপনি মনে মনে নিশিচতঃ ঐ ছেলে সাংঘাতিক অসভ্য!
-... ... 
-মাত্র কয়েক দিনের ব্যাবধানে ঐ একি মানুষ আপনার বেস্ট ফ্রেন্ড। 
+... ...
+মাত্র কয়েক দিনের ব্যাবধানে ঐ একি মানুষ আপনার বেস্ট ফ্রেন্ড।
 
 ## ঘটনা ২
-নতুন ক্লাসে নতুন স্যার আসলো, সবাইকে একটা ইংরেজী শব্দের অর্থ জিজ্ঞেস করেছেন, কেউ পারেনি। স্যার সবাইকে কান ধরিয়ে দাড় করিয়ে রেখেছে! এমন নির্দয় 
+নতুন ক্লাসে নতুন স্যার আসলো, সবাইকে একটা ইংরেজী শব্দের অর্থ জিজ্ঞেস করেছেন, কেউ পারেনি। স্যার সবাইকে কান ধরিয়ে দাড় করিয়ে রেখেছে! এমন নির্দয়
 আর অযৌক্তিক মানুষ হয়? আপনি মনে মনে ধরে নিলেন, এই স্যার হলো একজন অত্যন্ত নিষ্ঠুর মানুষ।
-... ... 
+... ...
 কিন্তু মাত্র কিছুদিন পরই এই স্যার কে নিয়ে কেউ কিছু বললে আপনার গাঁ জ্বলে। আপনার দৃষ্টিতে এই স্যারের মত এত ভাল মানুষই হয় না। যেমন দয়ালু তেমন বিদ্যান!
 
 ## ঘটনা ৩
@@ -20,48 +20,48 @@
 
 ## ঘটনা ৪
 রিক্সা ভাড়া ঠিক করে বাসায় এসেছেন, আসার পর রিক্সাওয়ালা বলছে ভাই ১০টা টাকা বাড়িয়ে দিন। শুনেই আপনার মাথায় রক্ত উঠে গেছে, কত্ত বড় বেয়াদব!
-ভাড়া ঠিক করে উঠেছি আগেই এখন এসে বলে বাড়িয়ে দিন, এই নিয়ে কতক্ষন ঝারলেন রিক্সাওয়ালাকে, আর মনে মনে বললেন, এদের জন্যই দেশের আজ এই অবস্থা। 
+ভাড়া ঠিক করে উঠেছি আগেই এখন এসে বলে বাড়িয়ে দিন, এই নিয়ে কতক্ষন ঝারলেন রিক্সাওয়ালাকে, আর মনে মনে বললেন, এদের জন্যই দেশের আজ এই অবস্থা।
 এখন এক কথা, একটু পরে আরেক কথা!
 ... ...  
-আপনি হয়তো জানেননা বিকাল হয়ে গেছে, এই রিক্সাওয়ালা এখনো দুপুরের খাবার খান নায়। 
+আপনি হয়তো জানেননা বিকাল হয়ে গেছে, এই রিক্সাওয়ালা এখনো দুপুরের খাবার খান নায়।
 পকেটে ৩০ টাকা আছে, আপনার ভাড়ার সাথে ১০টা টাকা বারিয়ে দিলে তার দুপুরের খাবারটা হয়ে যাবে। ঐ রিক্সাওয়ালা হয়তো লজ্জায় খাবার কথা বলতে পারেনি।
 
 ## ঘটনা ৫
-আপনার জরুরী প্রয়োজনে ৫ হাজার টাকা লাগবে। আপনি জানেন কিছুদিন আগে আপনার অমুক বন্ধু তার মোটর সাইকেলটা বিক্রি করে দিছে ৫০ হাজার টাকায়। 
-তো আপনি ভাবলেন, ওর কাছেতো ৫০ হাজার টাকা আছে, আমি ৫ হাজার টাকা চাইলেই দিয়ে দিবে। আপনি তার কাছে টাকা চাইলেন, 
-আর বললেন কিছুদিনের মধ্যেই দিয়ে দিবেন। আপনার বন্ধু বললো তার কাছে টাকা নাই, দিতে পারবে না। এই কথা শুনে আপনি রাগে দুঃখে তার সাথে কথা বলা বন্ধ 
+আপনার জরুরী প্রয়োজনে ৫ হাজার টাকা লাগবে। আপনি জানেন কিছুদিন আগে আপনার অমুক বন্ধু তার মোটর সাইকেলটা বিক্রি করে দিছে ৫০ হাজার টাকায়।
+তো আপনি ভাবলেন, ওর কাছেতো ৫০ হাজার টাকা আছে, আমি ৫ হাজার টাকা চাইলেই দিয়ে দিবে। আপনি তার কাছে টাকা চাইলেন,
+আর বললেন কিছুদিনের মধ্যেই দিয়ে দিবেন। আপনার বন্ধু বললো তার কাছে টাকা নাই, দিতে পারবে না। এই কথা শুনে আপনি রাগে দুঃখে তার সাথে কথা বলা বন্ধ
 করে দিয়েছেন। ভেবেছিলেন সে আপনার খুব কাছে বন্ধু, কিন্তু তার কাছ থেকে এমন ব্যাবহার পাবেন আশা করেন নাই।
-... ... 
-কিছুদিন পড় জানলেন তার অন্য একটা জরুরী ছিল, ৭০ হাজার টাকা দরকার ছিল, তাই মোটর সাইকেল বিক্রি করে দিয়েছে।  বাকি ২০ হাজার টাকা 
+... ...
+কিছুদিন পড় জানলেন তার অন্য একটা জরুরী ছিল, ৭০ হাজার টাকা দরকার ছিল, তাই মোটর সাইকেল বিক্রি করে দিয়েছে।  বাকি ২০ হাজার টাকা
 আরেক বন্ধুর কাছ থেক ধার নিয়েছে।
 
 ## ঘটনা ৬
-এক বন্ধু সবসময় আপনার পাশে থাকে, আপনার সাথে সময় কাটায়। আজকে হঠাৎ একটা বিপদে পড়েছেন, তাকে ডাকলেন আপনাকে সাহায্য করার জন্য। 
-কিন্তু সে আসলো না। আপনি মনে মনে ভাবলেন, "সুসময়ে অনেকই বন্ধু বটে হয়, অসময়ে হায় হায় কেউ কারো নয়"। ও আমার প্রকৃত বন্ধু না, 
+এক বন্ধু সবসময় আপনার পাশে থাকে, আপনার সাথে সময় কাটায়। আজকে হঠাৎ একটা বিপদে পড়েছেন, তাকে ডাকলেন আপনাকে সাহায্য করার জন্য।
+কিন্তু সে আসলো না। আপনি মনে মনে ভাবলেন, "সুসময়ে অনেকই বন্ধু বটে হয়, অসময়ে হায় হায় কেউ কারো নয়"। ও আমার প্রকৃত বন্ধু না,
 ও হলো "বসন্তের কোকিল"
 
 ## ঘটনা ৭
-আপনি অসুস্থ হয়ে হাসপাতালে ভর্তি, আপনার বন্ধু রাত দিন হাসপাতালে আপনাকে সংগ দিচ্ছে। যখনই আপনি একটু সুস্থ হয়ে বাসায় ফিরবেন, তখন তার নানা ব্যাস্ততা। 
+আপনি অসুস্থ হয়ে হাসপাতালে ভর্তি, আপনার বন্ধু রাত দিন হাসপাতালে আপনাকে সংগ দিচ্ছে। যখনই আপনি একটু সুস্থ হয়ে বাসায় ফিরবেন, তখন তার নানা ব্যাস্ততা।
 আপনি একা হয়ে গেলেন, সুস্থ হয়ে কাউকেই পাশে পাচ্ছেন না একটু সময় কাটানার জন্য। আপনি ভাবছেন, ওরে আমার কত কাছে বন্ধু ভাবছিলাম,
-কিন্তু কিছুদিন হাসপাতালে এসেই এখন হাওয়া হয়ে গেছে! এই রকম বন্ধু কোন কাজের না। 
+কিন্তু কিছুদিন হাসপাতালে এসেই এখন হাওয়া হয়ে গেছে! এই রকম বন্ধু কোন কাজের না।
 
 ## ঘটনা ৮
 পড়াশোনার পাঠ চুকিয়ে নতুন অফিসে যোগদান করেছেন, প্রথম দিনই আপনার এক বোকাসোকা চেহারার সিনিয়র কি যেন লিখতে গিয়ে আপনাকে জিজ্ঞেস করছে,
-"আচ্ছা ফ্রেন্ড বানান কি ie নাকি ei দিয়ে?" আপনি মনে মনে ভাবলেন, ইনি আমার সিনিয়র! ফ্রেন্ড বানানটাও না! এমন গাঁধা! 
-... ... 
+"আচ্ছা ফ্রেন্ড বানান কি ie নাকি ei দিয়ে?" আপনি মনে মনে ভাবলেন, ইনি আমার সিনিয়র! ফ্রেন্ড বানানটাও না! এমন গাঁধা!
+... ...
 কিছুদিন পর বুঝলেন এই লোকটিই আপনার অফিসের সবছে বিচক্ষন মানুষ!
 
-... ... ... ... ... 
+... ... ... ... ...
 
-এমন ঘটনা বলে শেষ করা যাবে না। এই সব গুলো ঘটনার মধ্যে সাধারণ(common) ব্যাপারটা কি? বিচার(Judge) করা। আমরা সহজে একটা ঘটনা, 
-একটা আচরণ, একটা উক্তি দিয়ে একটি মানুষ কে আমাদের মনের আদালতের কাঠগড়ায় দাড় করিয়ে ফেলি। তারপর বিচারও করে ফেলি যে 
+এমন ঘটনা বলে শেষ করা যাবে না। এই সব গুলো ঘটনার মধ্যে সাধারণ(common) ব্যাপারটা কি? বিচার(Judge) করা। আমরা সহজে একটা ঘটনা,
+একটা আচরণ, একটা উক্তি দিয়ে একটি মানুষ কে আমাদের মনের আদালতের কাঠগড়ায় দাড় করিয়ে ফেলি। তারপর বিচারও করে ফেলি যে
 ঐ মানুষটা ভাল নাকি খারাপ?
 
-আমরা সবাই চাই ইতিবাচক(Positive thinking) চিন্তা করতে। আমরা এটাও চাই যে আমাদের চারপাশের সবাই ইতিবাচক চিন্তা করুক। 
+আমরা সবাই চাই ইতিবাচক(Positive thinking) চিন্তা করতে। আমরা এটাও চাই যে আমাদের চারপাশের সবাই ইতিবাচক চিন্তা করুক।
 কিন্তু মজার ব্যাপার হলো ইতিবাচক চিন্তাটা আসলে আমরাও করতে পারি না, আমাদের চারপাশে যারা আছে তারাও না। ইতিবাচক চিন্তা করাটা
-একটা দীর্ঘ অনুশীলনের(practice) ব্যাপার। এমন না যে আমি ভাবলাম কাল থেকে আমি ইতিবাচক চিন্তা করব, আর কাল থেকেই আমি 
+একটা দীর্ঘ অনুশীলনের(practice) ব্যাপার। এমন না যে আমি ভাবলাম কাল থেকে আমি ইতিবাচক চিন্তা করব, আর কাল থেকেই আমি
 ইতিবাচক চিন্তা করার শুরু করলাম। কিংবা আজ শিক্ষকের কথায় শ্রেনীকক্ষের সবাই খুব উৎসাহী হয়েছে, কাল থেকে এই শ্রেনীর সবাই ইতিবাচক চিন্তা করা শুরু করল।
-ইতিবাচক চিন্তাটা যদি এভাবে একদিনে না-ই হয়, তাহলে এর শুরটা কিভাবে করতে হবে? এই ইতিচাবাচক চিন্তার প্রথম ধাপ কি? 
+ইতিবাচক চিন্তাটা যদি এভাবে একদিনে না-ই হয়, তাহলে এর শুরটা কিভাবে করতে হবে? এই ইতিচাবাচক চিন্তার প্রথম ধাপ কি?
 
 ইতিবাচক চিন্তার প্রথম ধাপ হলোঃ **"বিচার(Judge) করা বন্ধ করুন"**
 
@@ -70,21 +70,19 @@
 আর বন্ধু? অসময়েও দরকার, সুসময়েও দরকার। তাই অসময়ের বন্ধু যেমন আপনার আসল বন্ধু, সুসময়ের বন্ধুও নকল বন্ধু না।
 
 > মানুষ ভাল হয় না, খারাপও হয় না। মানুষ হয় মানুষের মত। কখনো ভাল কখনো খারাপ, কখনো কৃপন আবার কখনো উদার, কখনো সভ্য কখনো অসভ্যের, কখনো
-বদমেজাজী কখনো শান্ত, কখনো বন্ধু কখনো শত্রু। এই সব মিলিয়েই মানুষ  
- 
+বদমেজাজী কখনো শান্ত, কখনো বন্ধু কখনো শত্রু। এই সব মিলিয়েই মানুষ
 
-মানুষ তার পরিবেশ, পরিস্থিতি, আর্থিক অবস্থা, জীবনের শিক্ষা, অভিজ্ঞতা ইত্যাদি থেকে প্রতিনয়ত শিখে। এই শিক্ষা থেকে তার নিজের চিন্তা দিয়ে একেক সময় 
-একেক রকম আচরণ করে। কেউ যদি আজ খারাপ আচরণ করে, এটাকে সহজভাবে নিন। দুইদিন পরে আপনি সহজ ভাবে তার সাথে কথা বলুন যেন কিছুই হয় নি, 
+
+মানুষ তার পরিবেশ, পরিস্থিতি, আর্থিক অবস্থা, জীবনের শিক্ষা, অভিজ্ঞতা ইত্যাদি থেকে প্রতিনয়ত শিখে। এই শিক্ষা থেকে তার নিজের চিন্তা দিয়ে একেক সময়
+একেক রকম আচরণ করে। কেউ যদি আজ খারাপ আচরণ করে, এটাকে সহজভাবে নিন। দুইদিন পরে আপনি সহজ ভাবে তার সাথে কথা বলুন যেন কিছুই হয় নি,
 দেখবেন ঐ মানুষটিও এমন ভাবে কথা বললবে যেন কিছুই হয়নি। এবং আসলেই কিছুই হয় নি, একজন মানুষ শুধু ঐ দিন তার পরিস্থিতি অনুযায়ী আচরণ করেছে।
- 
-তবে মনে রাখতে হবে ইতিবাচক চিন্তা করা কোন লক্ষ্য না, একটা একটা যাত্রা, এই যাত্রা আজীবনের। 
-এমন নয় যে আগামী এক সপ্তাহ আমি ইতিবাচক চিন্তা অনুশীলন করব, এর পর আবার ঠিক সব কিছু আগের মতই চলবে। এটা অনুশীলন করতে করতে 
+
+তবে মনে রাখতে হবে ইতিবাচক চিন্তা করা কোন লক্ষ্য না, একটা একটা যাত্রা, এই যাত্রা আজীবনের।
+এমন নয় যে আগামী এক সপ্তাহ আমি ইতিবাচক চিন্তা অনুশীলন করব, এর পর আবার ঠিক সব কিছু আগের মতই চলবে। এটা অনুশীলন করতে করতে
 হয়তো আপনি প্রতিদিন একটু করে মানুষ সম্পর্কে, জীবন সম্পর্কে ইতিবাচক চিন্তা করতে শিখবেন। একদিন দেখবেন, আপনার চারপাশের সবাইও ইতিবাচক চিন্তা করছে।
 
 তবে, এর মানে এই না যে কারও সাথে খারাপ আচরন করা খারাপ কিছু না। আমি শুধু বলতে চাইছি, একটা মানুষ খারাপ আচরণ করেছে মানে মানুষটা একদমই
 খারাপ, কোন ভাল গুন তার মধ্যে নাই ব্যাপারটা এমন না। হয়তো সে একজন ভাল মানুষ, শুধু পরিস্থিতির বা জীবন অভিজ্ঞতার শিকার হয়ে সে এই খারাপ আচরনটা করেছে।
 
-আসুন একটা ঘটনার ভিত্তিতে একজন মানুষ কে আমরা বিচার না করার অনুশীলন করি। পাশাপাশি, নিজেরা ভাল গুনাবলি অনুশীলন করি। দেখবেন আস্তে আস্তে 
-আমাদের সবই ইতিবাচক হয়ে যাচ্ছে।
-  
-  
+আসুন একটা ঘটনার ভিত্তিতে একজন মানুষ কে আমরা বিচার না করার অনুশীলন করি। পাশাপাশি, নিজেরা ভাল গুনাবলি অনুশীলন করি। দেখবেন আস্তে আস্তে
+আমাদের চারপাশের সবই ইতিবাচক হয়ে যাচ্ছে।
