For loop script updated

--- a/video_scripts/Series1_PHP_for_Beginners/2021_11_20_for_loop.md
+++ b/video_scripts/Series1_PHP_for_Beginners/2021_11_20_for_loop.md
@@ -30,7 +30,7 @@ echo("The sum is: {$sum}");
 ```
 
 #### কখন কোনটা ব্যাবহার করবেন?
-প্রায় সকল ক্ষেত্রেই আমরা while লুপ কিংবা for লুপ যে কোন একটি ব্যাবহার করতে পারি। তবে কিছু কিছু জায়গায় যেখানে ইনিশিয়াল ভ্যালু, কন্ডিশন এবং ইনক্রিমেন্ট/ডিক্রিমেন্ট ইত্যাদি স্পষ্টভাবে জানা থাকে সেখানে for লুপ ব্যাবহার করাই উত্তম। অন্যদিকে, অনেক ক্ষেত্রে দেখা যায় আমাদের লুপের কোন ইনিশিয়াল ভ্যালু থাকে না, ইনক্রিমেন্ট কিংবা ডিক্রিমেন্ট ও নেই। একটি নির্দিষ্টী কন্ডিশনে গিয়ে এটা লুপটি বন্ধ করতে হবে, কিন্তু ঐ কন্ডিশন কখন হবে তা আমরা আনি না, আমরা শুধু জানি কন্ডিশনটি কি হবে। তখন আমরা while লুপ ব্যাবহার করতে পারি। দিন শেষে আপনি যদি লুপ এর ব্যাবহার ভাল করে জানে ও অভিজ্ঞ হন, আপনি যেন কোন জায়গায় এই দুই লুপের যে কোন একটি ব্যাবহার করতে কাজ করতে পারবেন। পাশাপাশি আপনি এটাও বুঝতে পারবেন কখন কোনটি ব্যাবহার করলে সুবিধা হবে।
+প্রায় সকল ক্ষেত্রেই আমরা while লুপ কিংবা for লুপ যে কোন একটি ব্যাবহার করতে পারি। তবে কিছু কিছু জায়গায় যেখানে ইনিশিয়াল ভ্যালু, কন্ডিশন এবং ইনক্রিমেন্ট/ডিক্রিমেন্ট ইত্যাদি স্পষ্টভাবে জানা থাকে সেখানে for লুপ ব্যাবহার করাই উত্তম। অন্যদিকে, অনেক ক্ষেত্রে দেখা যায় আমাদের লুপের কোন ইনিশিয়াল ভ্যালু থাকে না, ইনক্রিমেন্ট কিংবা ডিক্রিমেন্ট ও নেই। একটি নির্দিষ্টী কন্ডিশনে গিয়ে এটা লুপটি বন্ধ করতে হবে, কিন্তু ঐ কন্ডিশন কখন হবে তা আমরা আনি না, আমরা শুধু জানি কন্ডিশনটি কি হবে। তখন আমরা while লুপ ব্যাবহার করতে পারি। দিন শেষে আপনি যদি লুপ এর ব্যাবহার ভাল করে জানে ও অভিজ্ঞ হন, আপনি যেন কোন জায়গায় এই দুই লুপের যে কোন একটি ব্যাবহার করতে কাজ করতে পারবেন। পাশাপাশি আপনি এটাও বুঝতে পারবেন কখন কোনটি ব্যাবহার করলে সুবিধা হবে। So, practice makes a man perfect.
 
 #### Call of action
-আজকে আমরা লুপ নিয়ে আলোচনা করেছি। এই লুপ নিয়ে আমি আপনাদের একটি বাড়ির কাজ দিতে চাই। সেটি হলো, আমরা দেখেছি যে কিভাবে আমরা ১ থেকে ১০০ পর্যন্ত সব গুলোর সংখ্যার যোগফল বের করতে পারি। এখন আপনাদের কাজ হলো ১ থেকে ১০০ পর্যন্ত শুধু জোড় সংখ্যা গুলোর যোগফল বের করা। এই ছিল আমাদের আজকের লেকচার। সবার প্রতি শুভ কামনা জানিয়ে শেষ করছি আমাদের আজকের লেকচার। Happy Coding!
+আজকে আমরা for লুপ নিয়ে আলোচনা করেছি। এই লুপ নিয়ে আমি আপনাদের একটি বাড়ির কাজ দিতে চাই। সেটি হলো, আমরা দেখেছি যে কিভাবে আমরা ১ থেকে ১০০ পর্যন্ত সব গুলোর সংখ্যার যোগফল বের করতে পারি। এখন আপনাদের কাজ হলো ১ থেকে ১০০ পর্যন্ত কত গুলো সংখ্যাকে ৩ দিয়ে ভাগ করলে ভাগশেষ থাকবে না এটা বের করা। এই ছিল আমাদের আজকের লেকচার। সবার প্রতি শুভ কামনা জানিয়ে শেষ করছি Happy Coding!
