Modified the function script

--- a/video_scripts/Series1_PHP_for_Beginners/2021_12_05_function.md
+++ b/video_scripts/Series1_PHP_for_Beginners/2021_12_05_function.md
@@ -3,13 +3,13 @@
 
 আশা করি সবাই ভাল আছেন। আজকে আমরা প্রোগ্রামিং-এর খুবই চমৎকার এবং শক্তিশালি একটা বিষয় নিয়ে আলোচনা করব। সেটা হলো ফাংশন।
 
-আমি দেখেছি প্রোগ্রামিং যারা নতুন শিখে তারা অনেকেই অকারণে ফাংশনকে ভয় পায়। ফাংশন আসলে খুবই সহজ এবং সুন্দর টুল। আশা করি এই লেকচারের পর আপনারা ব্যাচারা ফাংশনকে বন্ধু করে নিবেন।
+আমি দেখেছি প্রোগ্রামিং যারা নতুন শিখে তারা অনেকেই অকারণে ফাংশনকে ভয় পায়। ফাংশন আসলে খুবই সহজ এবং সুন্দর একটী টুল। আশা করি এই লেকচারের পর আপনারা ব্যাচারা ফাংশনকে বন্ধু হিসাবে আপন করে নিবেন।
 
-চলুন শুরু করা যাক!
+তাহলে চলুন শুরু করা যাক!
 
 ## Content
 
-আসলে আগেও আমরা ফাংশন ব্যাবহার করেছে, কোথায়? আমাদের প্রিয় সাবজেক্ট গনিতে! প্রথমে আমরা দেখব কিভাবে আমরা স্কুলে গনিতে ফাংশন লিখেছি।
+আসলে আমরা শিখার আগেও ফাংশন ব্যাবহার করেছে, একটু মনে করার চেষ্টা করুন কোথায়? হ্যা, আমাদের প্রিয় সাবজেক্ট গনিতে! প্রথমে আমরা দেখব কিভাবে আমরা স্কুলের গনিতে ফাংশন লিখতাম।
 
 ```
 f(x) = x + 2x + 5
@@ -40,12 +40,14 @@ $f10 = f(10);
 echo($f10);
 ```
 
-কি ফাংশন কি কঠিন? একদম সহজ তাই না। এই সাধারণ ফাংশনটি দিয়ে আমরা অসাধারণ সব কাজ করে ফেলতে পারি। এখানে কিছু বিষয় বুঝার আছেঃ
-১। ফাংশনের নাম
-২। ফাংশনের প্যারামিটার
-৩। ফাংশনের রিটার্ন
+কি মনে হয়, ফাংশন কি কঠিন? একদম সহজ তাই না। এই সাধারণ ফাংশনটি দিয়ে আমরা অসাধারণ সব কাজ করে ফেলতে পারি। এখানে কিছু বিষয় বুঝার আছেঃ
+১। ফাংশনের নাম, এখানে ফাংশনের নাম হলো f, এখানে f না দিয়ে আমরা অন্য যেন কোন নাম দিতে পারতাম।
+২। ফাংশনের প্যারামিটার বা আরগুমেন্ট হচ্ছে x, এখানে আমরা এক্স না দিয়ে অন্য যেন কোন নাম দিতে পারতাম, আবার আরও কিছু আরগুমেন্টও এড করতে পারতাম। আবার কোন আরগুমেন্ট ছাড়াও আমরা ফাংশন লিখতে পারি।
+৩। ফাংশনের রিটার্ন। এই ফাংশনটি কল করলে আমাদেরকে কি ফেরত দিবে। এখানে আমাদের কে এই এক্সপ্রেশনের ফলাফল ফেরত দিচ্ছে। আমরা এমনও করতে পারতাম যেন এই ফাংশন আমাদের কে কিছুই ফেরত দিবে না। অর্থাৎ কোন কিছু রিটার্ণ করবে না।
 
-যেমন আমরা আমাদের লুপের লেকচারে আমরা দেখেছি কিভাবে ১ থেকে ১০০ পর্যন্ত সব গুলো সংখার যোগ ফল বের করতে পারি।
+ফাংশন কেন দরকার এটা আরও ভাল করে বুঝার জন্য চলুন আমরা ফাংশনের আরেকটি উদাহরণ দেখিঃ
+
+আমরা আমাদের লুপের লেকচারে আমরা দেখেছি কিভাবে ১ থেকে ১০০ পর্যন্ত সব গুলো সংখার যোগ ফল বের করতে পারি।
 
 ```
 $sum = 0;
@@ -59,6 +61,6 @@ echo($sum);
 একটু খেয়াল করলেই আপনারা বুঝতে পারবেন কেন ফাংশন দরকার। আমাদের একই কোড বার বার না লিখে আমরা ফাংশন ব্যাবহার করে ঐ ফাংশন করলেই পারি।
 
 ## Call to Action
-আজকে আপনাদের বাড়ির কাজ থাকবে, আমরা আমাদের foreach লুপের লেকচারে দেখেছি কিভাবে একটি foreach ব্যাবহার করে একটি এর‍্যে-এর সব গুলো এলিমেন্টকে আমরা প্রিন্ট করতে পারি। আজকে আমরা যেহেতু ফাংশন শিখেছি সেহেতু আমরা একটি ফাংশন লিখব যার মধ্যে যে কোন এর‍্যে পাস করলে সে ঐ এর‍্যের সব গুলো সদস্যকে প্রিন্ট করে দেখাবে।
+আজকেও আপনাদের বাড়ির কাজ থাকবে। আমরা আমাদের foreach লুপের লেকচারে দেখেছি কিভাবে foreach লুপ ব্যাবহার করে একটি এর‍্যে-এর সব গুলো এলিমেন্টকে আমরা প্রিন্ট করতে পারি। আজকে আমরা যেহেতু ফাংশন শিখেছি সেহেতু আমরা একটি ফাংশন লিখব যার মধ্যে যে কোন এর‍্যে পাস করলে সে ঐ এর‍্যের সব গুলো সদস্যকে প্রিন্ট করে দেখাবে।
 
 তো এই ছিল আজকে আমাদের function নিয়ে লেকচার। দেখা হবে পরের লেকচারে সেই পর্যন্ত সবাই ভাল থাকবেন। Happy Coding!
