--- a/articles/2022_02_03_ইতিবাচক চিন্তার দ্বীতিয় ধাপ.md
+++ b/articles/2022_02_03_ইতিবাচক চিন্তার দ্বীতিয় ধাপ.md
@@ -1,13 +1,12 @@
 
-(Yuval Noah Harari)[https://en.wikipedia.org/wiki/Yuval_Noah_Harari] এর বেস্ট সেলার বই (Sapiens: A Brief History of Humankind)[https://en.wikipedia.org/wiki/Sapiens:_A_Brief_History_of_Humankind] বই এর ১৯ নম্বর অধ্যায়ের একটি অংশের অনুবাদ দিয়ে শুরু করছি এই লিখাটি...
->> "যদি সুখের সংজ্ঞা হয় ইচ্ছাপূরণ, তাহলে বলতে হয় দুটো জিনিস আমাদের সুখের সঞ্চয় খালি করে দিচ্ছে। একটা হল গণমাধ্যম, অন্যটা হল বিজ্ঞাপন শিল্প। ৫০০০ বছর আগের কোনো গ্রামের একজন আঠারো বছর বয়সী মানুষ নির্দ্বিধায় নিজেকে একজন আকর্ষণীয় মানুষ ভাবতে পারত। কারণ তার গ্রামে আর যে জনাপঞ্চাশেক মানুষ ছিল তাদের বেশিরভাগই হয় বৃদ্ধ নয়তো একেবারে শিশু। কিন্তু আজকের দিনে এরকম বয়সের একজন মানুষ সেই সন্তুষ্টিটুকু না পেয়ে হীনমন্যতায় ভোগে। তার স্কুলের বাকি সবাই যদি দেখতে খারাপও হয়, তাতেও তার শান্তি নেই, কারণ সে নিজেকে তুলনা করছে চলচ্চিত্রের নায়ক-নায়িকা, খেলোয়াড় কিংবা সুপারমডেলদের সাথে। আমাদের টেলিভিশন, রাস্তার পাশের বিলবোর্ড আর ফেসবুক তাকে এই তুলনাটা করতে বাধ্য করছে।"
+<a href="https://en.wikipedia.org/wiki/Yuval_Noah_Harari" target="_blank">Yuval Noah Harari</a> এর বেস্ট সেলার বই <a href="https://en.wikipedia.org/wiki/Sapiens:_A_Brief_History_of_Humankind" target="_blank">Sapiens: A Brief History of Humankind</a> বই এর ১৯ নম্বর অধ্যায়ের একটি অংশের অনুবাদ দিয়ে শুরু করছি এই লিখাটি...
+> "যদি সুখের সংজ্ঞা হয় ইচ্ছাপূরণ, তাহলে বলতে হয় দুটো জিনিস আমাদের সুখের সঞ্চয় খালি করে দিচ্ছে। একটা হল গণমাধ্যম, অন্যটা হল বিজ্ঞাপন শিল্প। ৫০০০ বছর আগের কোনো গ্রামের একজন আঠারো বছর বয়সী মানুষ নির্দ্বিধায় নিজেকে একজন আকর্ষণীয় মানুষ ভাবতে পারত। কারণ তার গ্রামে আর যে জনাপঞ্চাশেক মানুষ ছিল তাদের বেশিরভাগই হয় বৃদ্ধ নয়তো একেবারে শিশু। কিন্তু আজকের দিনে এরকম বয়সের একজন মানুষ সেই সন্তুষ্টিটুকু না পেয়ে হীনমন্যতায় ভোগে। তার স্কুলের বাকি সবাই যদি দেখতে খারাপও হয়, তাতেও তার শান্তি নেই, কারণ সে নিজেকে তুলনা করছে চলচ্চিত্রের নায়ক-নায়িকা, খেলোয়াড় কিংবা সুপারমডেলদের সাথে। আমাদের টেলিভিশন, রাস্তার পাশের বিলবোর্ড আর ফেসবুক তাকে এই তুলনাটা করতে বাধ্য করছে।"
 
 <br><br>
 এই লিখাটি যদি এখানেই শেষ করে দেই আশা তাহলেও আপনার বুঝতে পারবেন আসলে সুখের দ্বীতিয় ধাপ আমি কিসের দিকে ইঙ্গিত করছি।
 <br><br>
 
 ### গল্প ১
-
 আমার মনে আছে, আমি যখন আমার প্রত্যন্ত গ্রামের প্রাথমিক বিদ্যালয়ে পড়ি, তখন আসলে হাতেগোনা কয়েকজন ছাড়া তেমন কেউই স্কুলব্যাগ নিয়ে ক্লাসে আসত না, সবাই বই হাতে নিয়েই স্কুলে যেত। যারা নব্বুয়ের দশকে গ্রামে স্কুলে পড়েছেন তারা হয়তো ব্যাপারটা খুব সহজেই চিন্তা করতে পারবেন। একদিন আমার মা কোথা থেকে যেন খোঁজ পেলেন ঢাকায় কেউ একজন ব্যাগের দোকানে কাজ করে, সে গ্রামে আসার সময় কিছু স্কুলব্যাগ নিয়ে এসেছি, বিক্রি করবে। তো আম্মা আমাকে নিয়ে গেলেন স্কুলব্যাগ কিনে দিবেন, একটু ব্যাতিক্রম ডিজাইনের একটা ব্যাগ পছন্দ হলো, তখনকার সময়ে বেশ দাম দিয়েই ব্যাগটা কিনতে হয়েছিল। তো আমি ছোটবেলা থেকেই একটু ইনট্রুভার্ট তথা লাজুক প্রকৃতির মানুষ ছিলাম, অন্য মানুষের নজড়কারে এমন কিছু করতে লজ্জা লাগত। Yes, I always wanted to be that nobody। যায় হোক প্রথম কয়েকদিন আমার এই ব্যাগ নিয়ে স্কুলে যেতে খুব লজ্জা লাগছিল। আস্তে আস্তে খেয়াল করলাম অনেকেই আমার ব্যাগটা পছন্দ করছে, এমনকি আমাদের ক্লাসে আস্তে আস্তে স্কুল ব্যাগের সংখ্যা বাড়তে লাগলো। আমার দৃষ্টিতে আমার ব্যাগটা ছিলো আমাদের স্কুলের সবচেয়ে সুন্দর ব্যাগ। বুঝতেই পারছেন আমার ব্যাগ নিয়ে আমি সুখেই দিন পার করছিলাম...... যতদিন পর্যন্ত না আমার ব্যাগের চেয়েও সুন্দর ব্যাগ নিয়ে আরেকজন ক্লাসে আসা শুরু করলো। হ্যা, যখন আমারই আরেক সহপাঠি আমার ব্যাগের চেয়েও সুন্দর(আমার চোখে) ব্যাগ নিয়ে ক্লাসে আসা শুরু করলো, তখন আমার ব্য্যগ সুখে ভাটা পড়া শুরু করল। যায় হোক, লাজুক হওয়ার একটি ভাল দিক হলো, অযৌক্তিক কিছু আপনি আপনার বাবা-মার কাছে চাইতেও সংকুচ/লজ্জাবোধ করবেন। তাই আমিও অকারণে আরেকটি ব্যাগের বাইনা ধরিনি।
 <br><br>
 
@@ -19,7 +18,6 @@
 <br><br>
 
 ### গল্প ৩
-
 হয়তো আপনি কোন গ্রামের মুক্ত আলোবাতাসে বাস করছেন, তরতাজা মাছ, শ্বাক্‌স্ববজি খাচ্ছেন, গভীর নলকূপের বিশুদ্ধ পানি পান করছেন, বিস্তৃত মাঠে খেলাধুলা করছেন, পাড়াপ্রতিবেশি নিয়ে সুখে দিনযাপন করছেন। কিন্তু না, আপনি যখনই গ্রাম থেকে শহরে যাবেন, দেখবেন, তাদের রান্না ঘরে গ্যাসের চুলা টিপ দিলেই আগুন জ্বলে, বাথরুমে টেপ ঘোরালেই দিলেই পানি পরে, ঘর থেকে বের হলেই রিক্সা নিয়ে যেখানে খুশি সেখানে আরানে চলে যেন পারছেন। তারপর শহরে কেনা কাটার জন্য আছে, বড় বড় শপিংমল...আপনি গ্রামে একদম সুখে নেয়, একদমই না। আপনি কখনো তুলনা করবেন না, আপনার খেলার মাঠ এখানে নেই, আপনার গ্রামের উঠোনে জোৎসারাতে মাদুর বিছিয়ে যে চাঁদের আলোতে চাঁদের বুড়ির গল্প শুনতেন আপনার দাদির কাছে, এইগুলো আপনি বেমালুম ভুলে যাবেন।
 <br><br>
 
@@ -29,17 +27,17 @@
 আপনি গ্রাম থেকে শহরে যেতে চান, শহর ছেড়ে অন্য দেশে যেতে চান, কারন আমরা দেখি আমার পাশের গ্রামের বন্ধুটি অমুক দেশে গিয়ে কাড়ি কাড়ি টাকা কামাচ্ছে। তার পাসপোর্ট যে মধ্যপ্রাচ্যের কোন সাবেহী ব্যাবসায়ীর হাতে বন্দি, সে চাইলেও দেশে আসতে পারছে না, সেই তুলনা আমরা করি না।
 <br><br>
 
-আপনি ছেলে হয়ে থাকেন তাহলে হয়তো ফেইসবুক(অথবা ফেইকবুক) ঘুরে ঘুরে নায়কদের ফটুশুট দেখবেন, আর নিজেকে তুলোনা করবেন তাদের সাথে। ভাববেন কি সুন্দর তাদের জীবন, কি আনন্দ, কি আরাম। আর যদি একজন মেয়ে হয়ে থাকেন, আপনি ফেইসবুক ঘুরে ঘুরে নাইকাদের ফটোশুট দেখবেন আহা কি আলোক ঝলমলে তাদের জীবন। মাহি, পুর্নিমা, বুবলিদের ফেইসবুক ঘুরে ঘুরে আপনি তাদের মত হতে চাইবেন। অথচ এই নায়কাদের একজনকে তৎকালিন প্রভাবশালী একজন ধর্ষনের হুমকি দেওয়ার ২ বছর পেরিয়ে যাওয়ার পরও টু-শব্দটিও করতে পারেননি, (ঘটনাচক্রে আমরা সেটা জানতে পেরেছি)[https://www.prothomalo.com/entertainment/dhallywood/%E0%A6%AB%E0%A6%BE%E0%A6%81%E0%A6%B8-%E0%A6%B9%E0%A6%93%E0%A7%9F%E0%A6%BE-%E0%A6%B0%E0%A7%87%E0%A6%95%E0%A6%B0%E0%A7%8D%E0%A6%A1-%E0%A6%A8%E0%A6%BF%E0%A7%9F%E0%A7%87-%E0%A6%AF%E0%A6%BE-%E0%A6%AC%E0%A6%B2%E0%A6%B2%E0%A7%87%E0%A6%A8-%E0%A6%AE%E0%A6%BE%E0%A6%B9%E0%A7%80]। এই দিকটা কি আপনি নিজের সঙ্গে তুলনা করেন? খেয়াল করেছেন কি? তুলনা করার সময় আমরা অন্য মানুষের সুখের দিকটা বেশি দেখি, এই সুখের পেছনে তাকে যে কত ত্যাগ তিতিক্ষার মধ্য দিয়ে যেতে হয়েছে এটা আমরা জানিও না, জানতে চাইওও না।
+আপনি ছেলে হয়ে থাকেন তাহলে হয়তো ফেইসবুক(অথবা ফেইকবুক) ঘুরে ঘুরে নায়কদের ফটুশুট দেখবেন, আর নিজেকে তুলোনা করবেন তাদের সাথে। ভাববেন কি সুন্দর তাদের জীবন, কি আনন্দ, কি আরাম। আর যদি একজন মেয়ে হয়ে থাকেন, আপনি ফেইসবুক ঘুরে ঘুরে নাইকাদের ফটোশুট দেখবেন আহা কি আলোক ঝলমলে তাদের জীবন। মাহি, পুর্নিমা, বুবলিদের ফেইসবুক ঘুরে ঘুরে আপনি তাদের মত হতে চাইবেন। অথচ এই নায়কাদের একজনকে তৎকালিন প্রভাবশালী একজন ধর্ষনের হুমকি দেওয়ার ২ বছর পেরিয়ে যাওয়ার পরও টু-শব্দটিও করতে পারেননি, <a href="https://www.prothomalo.com/entertainment/dhallywood/%E0%A6%AB%E0%A6%BE%E0%A6%81%E0%A6%B8-%E0%A6%B9%E0%A6%93%E0%A7%9F%E0%A6%BE-%E0%A6%B0%E0%A7%87%E0%A6%95%E0%A6%B0%E0%A7%8D%E0%A6%A1-%E0%A6%A8%E0%A6%BF%E0%A7%9F%E0%A7%87-%E0%A6%AF%E0%A6%BE-%E0%A6%AC%E0%A6%B2%E0%A6%B2%E0%A7%87%E0%A6%A8-%E0%A6%AE%E0%A6%BE%E0%A6%B9%E0%A7%80" target="_blank">ঘটনাচক্রে আমরা সেটা জানতে পেরেছি</a>। এই দিকটা কি আপনি নিজের সঙ্গে তুলনা করেন? খেয়াল করেছেন কি? তুলনা করার সময় আমরা অন্য মানুষের সুখের দিকটা বেশি দেখি, এই সুখের পেছনে তাকে যে কত ত্যাগ তিতিক্ষার মধ্য দিয়ে যেতে হয়েছে এটা আমরা জানিও না, জানতে চাইওও না।
 <br><br>
 
 ### তাহলে সুখী হতে হলে কি করা উচিত?
 
 সহজ হিসাব। তুলনা করা বন্ধ করুন। এই তুলনা হলো আমাদের অযৌক্তিক চাহিদা, হিংসার ইত্যাদির জন্মদাতা। আপনার যা প্রয়োজন তা করুন, সামর্থ না থাকলে পরিশ্রম করে সামর্থ্য অর্জন করার চেষ্টা করুন। আরেকজন কি আছে, কে আছে এই সব তুলনা করলে আমরা কোনদিনই এই পাল্লা সমান করতে পারব না।
 শেষ করছি আমার প্রিয় চলচিত্র থ্রি ইডিঅটসের সেই জনপ্রিয় উক্তিটি দিয়ে
->> "বন্ধু যখন পরীক্ষায় ফেইল করে তখন অনেক খারাপ লাগে, আর বন্ধু যখন পড়িক্ষায় প্রথমস্থান অধিকার করে তখন আরও বেশি খারাপ লাগে"
+> "বন্ধু যখন পরীক্ষায় ফেইল করে তখন অনেক খারাপ লাগে, আর বন্ধু যখন পড়িক্ষায় প্রথমস্থান অধিকার করে তখন আরও বেশি খারাপ লাগে"
 <br><br>
 
 তাই বন্ধু, পরিবার, আত্মিয়স্বজন কিংবা **অন্য কারো সাথে নিজেকে তুলনা করা বন্ধ করুন**। কেউ সুখে থাকলে তাকে বাহবা দিন, কেউ দুঃখে থাকলে তাকে সহযোগিতা করুন। তুলনা আপনার সুখ কেড়ে নিয়ে আপনার মধ্যে হিংসা, অযৌক্তিক চাহিদা, অহংকার, ষড়যন্ত্র ইত্যাদির জন্ম দেয়। তুলনা করা থেকে বিরত থাকলে আমি বিশ্বাস করি মানসিক প্রশান্তির দিকে আরেক ধাপ এগিয়ে যাবেন। শুভ কামনা।
 <br><br>
 
-**বিঃ দ্রঃ** আমি আসলে পরিকল্পনা করিনি সুখের ধাপ নিয়ে কখনো লিখা চালিয়ে যাব। আমার অন্যতম মেন্টর (মিজবাহ আহ্‌সান বাহারাম)[https://www.facebook.com/Baharam] ভাই রিতিমত আমাকে ধাক্কা দিয়ে লিখতে বাধ্য করেছেন। এই লিখা যদি কাউকে সুখের দিকে এক ধাপ অগ্রসর করে থাকে তাহলেও বাহারাম ভাইও এর জন্য ধন্যবাদ প্রাপ্য।
+**বিঃ দ্রঃ** আমি আসলে পরিকল্পনা করিনি সুখের ধাপ নিয়ে কখনো লিখা চালিয়ে যাব। আমার অন্যতম মেন্টর <a href="https://www.facebook.com/Baharam" target="_blank">মিজবাহ আহ্‌সান বাহারাম</a> ভাই রিতিমত আমাকে ধাক্কা দিয়ে লিখতে বাধ্য করেছেন। এই লিখা যদি কাউকে সুখের দিকে এক ধাপ অগ্রসর করে থাকে তাহলেও বাহারাম ভাইও এর জন্য ধন্যবাদ প্রাপ্য।
