--- a/articles/2022_12_28_recap_2022.md
+++ b/articles/2022_12_28_recap_2022.md
@@ -1,10 +1,10 @@
 ## Why am I writing this?
-This is my first recap article. I am writing this because I began to set a yearly goal at the beginning of 2022.
+This is my first recap article. I am writing this because for the first time, I began to set a yearly goal at the beginning of 2022.
 Now, as the new year(2023) is approaching, I have the opportunity to cross-match my goals and see the changes.
 Besides, I think it's a good way to keep track of my progress year by year. I don't know if anyone else
 will have something to take something out from here but it at least will be a reminder to me. Finally, though I am yet
-someone to be followed for anything, I follow community influencers like [Freek Van der Herten](https://freek.dev/2400-a-recap-of-2022). So, why
-don't I write my not-so-interesting recap?
+someone to be followed for anything, I follow PHP community influencers who also motivate me to write my own. So, why
+don't I write my not-so-interesting review of 2022?
 <br><br>
 
 ## Work Environment Setup
@@ -20,29 +20,29 @@ is getting complicated day by day.
 <br><br>
 
 ## My YouTube Channel
-I started my [YouTube channel](https://www.youtube.com/c/ImranicShow) in 2021. I started with a 
+I started my [YouTube channel](https://www.youtube.com/c/ImranicShow) in 2021. In 2022, I finished a 
 [PHP tutorial series](https://www.youtube.com/watch?v=_gNAiJi2qzM&list=PLbBHxjfPgatjkgBCfi98sIxi_UYH7EHr-)
 in my mother tongue(Bangla) for the beginners who want to start learning web development with PHP. After completing that series, I started another series to explain 
 [SOLID principles](https://www.youtube.com/watch?v=PpErMHYLkqA&list=PLbBHxjfPgathatwksq5RiGqcgou6VIv4g)
 in PHP with practical examples. I haven't finished with this SOLID principles series yet. I had a goal to create at least 50 videos for my
 channel in 2022, but I created only 30 videos. I haven't achieved my target but still I am happy with the numbers.
-Form now on I just want it to continue, my target for this year will be same as before. One remarkable change in my YouTube channel might happen this
-year is, I will start creating video in English. Though my english is not in a level to start speaking publicly, I want to be shameless in public 
-speaking.
+Form now on I just want it to continue this content creation journey, my target for this year will be same as before. 
+One remarkable change in my YouTube channel might happen this year is, I will start creating video in English. 
+Though my english is not in a level to start speaking publicly, I want to be shameless in public speaking.
 <br><br>
 
 ## Books
-I only read 7 books in 2022, I wanted to read at least 12 books. I count all the (small, silly) books I read. I don't know why,
+I only read 7 books in 2022, I wanted to read at least 12 books. I count all(ever small ones) the books I read. I don't know why,
 I don't enjoy reading fiction books anymore. I choose to watch Movies or TV-Series for fiction nowadays.
 Here is the list of books I read in 2022 and my one-line feedback.
 
-1. **1. Show your work(by Austin Kleon):** This is a small very effective even somewhat life-changing book. Highly recommended.
-2. **2. Laravel Beyond CRUD(by Brent Roose):** Awesome book that explains a possible organization of big Laravel Projects. Highly recommended.
-3. **3. Atomic Habits(by James Clear):** Quite a popular book for discussing the impact of habits in our life and how to form good habits. Highly recommended.
-4. **4. I will Teach You to Be Rich(by Ramit Sethi):** This book contains useful for building wealth, especially in UAS's contexts. Learned a few things but didn't enjoy the book much.
-5. **5. যুক্তিফাঁদে ফড়িং(by Chomok Hasan):** An awesome book written in Bangla for beginners who want to know about logical fallacy. Recommended for Bangla readers.
-6. **6. Ten++ Ways to Make Money as a Developer(by Florin Pop):** Ideally I avoid books with this sort of catchy(click-bite) title, but as I was following Florin Pop on Twitter, I am influenced. The book is not bad, recommended.
-7. **7. It Doesn't Have to Be Crazy at Work(by Json Fried):** An impactful book about the importance of personal life and work-life balance. Highly Recommended especially to the people who run businesses/companies.
+1. <span class="font-semibold">1. Show your work</span>(<span class="text-gray-600">by Austin Kleon</span>): This is a small but very effective even somewhat life-changing book. Highly recommended.
+2. <span class="font-semibold">2. Laravel Beyond CRUD</span>(<span class="text-gray-600">by Brent Roose</span>): Awesome book that explains a possible organization of big Laravel Projects. Highly recommended.
+3. <span class="font-semibold">3. Atomic Habits</span>(<span class="text-gray-600">by James Clear</span>): Quite a popular book for discussing the impact of habits in our life and how to form good habits. Highly recommended.
+4. <span class="font-semibold">4. I will Teach You to Be Rich</span>(<span class="text-gray-600">by Ramit Sethi</span>): This book contains useful for building wealth, especially in UAS's contexts. Learned a few things but didn't enjoy the book much.
+5. <span class="font-semibold">5. যুক্তিফাঁদে ফড়িং</span>(<span class="text-gray-600">by Chomok Hasan</span>): An awesome book written in Bangla for beginners who want to know about logical fallacy. Recommended for Bangla readers.
+6. <span class="font-semibold">6. Ten++ Ways to Make Money as a Developer</span>(<span class="text-gray-600">by Florin Pop</span>): Ideally I avoid books with this sort of catchy(click-bite) title, but as I was following Florin Pop on Twitter, I am influenced. The book is not bad, recommended.
+7. <span class="font-semibold">7. It Doesn't Have to Be Crazy at Work</span>(<span class="text-gray-600">by Json Fried</span>): An impactful book about the importance of personal life and work-life balance. Highly Recommended especially to the people who run businesses/companies.
 <br>
 I started reading 2 more books related to databases and Machine Learning but haven't finished yet.
 <br><br>
@@ -55,4 +55,4 @@ Let's see how far I can go.
 
 ## Overall
 I am not unhappy with my progress this year, but I can see there is a lot of room to improve. I am looking forward to writing more
-articles and read more books.
+articles, read more books and create more contents.
