Article links are made new tab

--- a/articles/2022_12_28_recap_2022.md
+++ b/articles/2022_12_28_recap_2022.md
@@ -20,10 +20,10 @@ is getting complicated day by day.
 <br><br>
 
 ## My YouTube Channel
-I started my [YouTube channel](https://www.youtube.com/c/ImranicShow) in 2021. In 2022, I finished a 
-[PHP tutorial series](https://www.youtube.com/watch?v=_gNAiJi2qzM&list=PLbBHxjfPgatjkgBCfi98sIxi_UYH7EHr-)
+I started my <a href="https://www.youtube.com/c/ImranicShow" target="_blank">YouTube channel</a> in 2021. In 2022, I finished a 
+<a href="https://www.youtube.com/watch?v=_gNAiJi2qzM&list=PLbBHxjfPgatjkgBCfi98sIxi_UYH7EHr-" target="_blank">PHP tutorial series</a>
 in my mother tongue(Bangla) for the beginners who want to start learning web development with PHP. After completing that series, I started another series to explain 
-[SOLID principles](https://www.youtube.com/watch?v=PpErMHYLkqA&list=PLbBHxjfPgathatwksq5RiGqcgou6VIv4g)
+<a href="https://www.youtube.com/watch?v=PpErMHYLkqA&list=PLbBHxjfPgathatwksq5RiGqcgou6VIv4g" target="_blank">SOLID principles</a>
 in PHP with practical examples. I haven't finished with this SOLID principles series yet. I had a goal to create at least 50 videos for my
 channel in 2022, but I created only 30 videos. I haven't achieved my target but still I am happy with the numbers.
 Form now on I just want it to continue this content creation journey, my target for this year will be same as before. 
